--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
     "bootstrap": "^5.3.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.2",
+    "react-card-slider-component": "^1.0.9",
     "react-dom": "^18.2.0",
+    "react-id-swiper": "^4.0.0",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^6.21.1",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^11.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
